# craft-sqlite

./: Cargo.toml  Makefile  test.sql
.sqls/: config.json
script/: dbs.sh
src/: main.rs
